# ggg

./: .clang-format  .clang-tidy  .gitignore  404.html  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_032ada3612666d9688067b332e42dd3c.html  dir_044bc6bc3cc4709103995eecb1da2c9f.html  dir_11ad480dc539c757ac7b5b6dd4dc76e8.html  dir_1908833e2f94b696273afa6012d59926.html  dir_1ac399ed297fdf8c573886c45dad51ae.html  dir_206383bdf9ab636456b26983a5e9c5b8.html  dir_3005dcb83feb9e796fcbfd4495953d57.html  dir_351f50e0119a49d91e37bc03ab60057a.html  dir_39f48f3cf1f351e74d6a0e18d5473673.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_59360abca8b61dbe6291fd83a538d612.html  dir_679a691bad5bdf16b6ab6b122a876955.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6c274da0b47c4fa3c5d8825df9d82ceb.html  dir_6e04ff8011f6237dc41858b5ad65b241.html  dir_882a4328ad6cc9c59e4e38bdf6464173.html  dir_941bf4af822350be15c38910142999c1.html  dir_a4ce982abe99d79f87aed49b91da11fe.html  dir_a52ea146b938495140a1ac073a086cc1.html  dir_cb98de2f19ede08c8b78bebcc61ce49b.html  dir_d37d8eae41a8cca37165612e3d8c7947.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d54a1c4582000aac6326425544b6b310.html  dir_d6851ea433e4391f5748437ca0e99da2.html  dir_d808bcc92eb57b5be721a066c09bf1b6.html  dir_d8ce98f42a8cee57261e1ad31a6a6b24.html  dir_dbe52813e078b27b61b97fe51301942e.html  dir_e0f06a38ada8b846601dcc96367de2d0.html  (+36 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  code-review.yml  docs.yml
api/: index.html
api_guide/: index.html
building/: index.html
cmake/: Doxyfile.in  Doxygen.cmake  DoxygenLayout.xml
d0/d17/: classggg_1_1graphs_1_1GraphValidationError-members.html
d0/d2d/: generate__parity_8cpp.html  generate__parity_8cpp_source.html
d0/d3f/: developing.html
d0/d60/: structggg_1_1graphs_1_1NoOpValidator.html  structggg_1_1graphs_1_1NoOpValidator.js
d0/d62/: structggg_1_1graphs_1_1player__utilities_1_1PlayerValidator-members.html
d0/d7f/: structggg_1_1graphs_1_1priority__utilities_1_1PriorityValidator.html  structggg_1_1graphs_1_1priority__utilities_1_1PriorityValidator.js
d0/d9d/: structggg_1_1graphs_1_1CompositeValidator.html  structggg_1_1graphs_1_1CompositeValidator.js
d0/da9/: logging_8hpp.html  logging_8hpp_source.html  namespaceggg_1_1buechi.html  namespaceggg_1_1buechi.js
d0/dc2/: namespaceggg_1_1solvers.html  namespaceggg_1_1solvers.js
d0/dca/: namespaceggg_1_1solutions.html  namespaceggg_1_1solutions.js
d0/dce/: structggg_1_1graphs_1_1player__utilities_1_1PlayerValidator.html  structggg_1_1graphs_1_1player__utilities_1_1PlayerValidator.js
d0/ddd/: api_graphs.html
d0/de3/: citelist.html
d0/df0/: classggg_1_1solvers_1_1Solver-members.html
d0/df7/: mixing_8hpp.html  mixing_8hpp_source.html
d1/d0d/: conceptggg_1_1solutions_1_1HasRegions.html
d1/d29/: tools_8md.html
d1/d32/: parity_2graph_8hpp.html  parity_2graph_8hpp_source.html
d1/d40/: structggg_1_1stochastic__discounted_1_1graph_1_1FilteredValidator-members.html
d1/db7/: classggg_1_1mean__payoff_1_1MSCASolver-members.html
d1/dc0/: conceptggg_1_1solutions_1_1HasValueMapping.html
d1/ddf/: api__solvers_8md.html
d2/d07/: classggg_1_1mean__payoff_1_1MSESolver-members.html
d2/d1c/: solver_8hpp.html  solver_8hpp_source.html
d2/d36/: src_2libggg_2stochastic__discounted_2solvers_2objective_8cpp.html  src_2libggg_2stochastic__discounted_2solvers_2objective_8cpp_source.html
d2/d37/: objective_8hpp.html  objective_8hpp_source.html
d2/d3d/: probability__utilities_8hpp.html  probability__utilities_8hpp_source.html
d2/d62/: strategy_8hpp.html  strategy_8hpp_source.html
d2/d85/: src_2libggg_2stochastic__discounted_2solvers_2strategy_8cpp.html  src_2libggg_2stochastic__discounted_2solvers_2strategy_8cpp_source.html
d2/d92/: conceptggg_1_1utils_1_1HasStatistics.html
d2/dd1/: tools_2stochastic__discounted_2solvers_2value_8cpp.html  tools_2stochastic__discounted_2solvers_2value_8cpp_source.html
d2/ddc/: api__overview_8md.html
d2/de3/: classggg_1_1stochastic__discounted_1_1StochasticDiscountedValueSolver.html  classggg_1_1stochastic__discounted_1_1StochasticDiscountedValueSolver.js  conceptggg_1_1graphs_1_1weight__utilities_1_1HasWeightOnVertices.html
d2/deb/: attractor_8hpp.html  attractor_8hpp_source.html
d2/df2/: structggg_1_1graphs_1_1priority__utilities_1_1PriorityValidator-members.html
d3/d02/: msca_8hpp.html  msca_8hpp_source.html
d3/d30/: classParityGameGenerator-members.html
d3/d33/: recursive_8hpp.html  recursive_8hpp_source.html
d3/d37/: conceptggg_1_1solutions_1_1MixingStrategyType.html
d3/d39/: classggg_1_1buechi_1_1AttractorSolver.html  classggg_1_1buechi_1_1AttractorSolver.js
d3/d6b/: structggg_1_1graphs_1_1CompositeValidator-members.html
developing/: index.html
docs/: api_graphs.md  api_guide.md  api_overview.md  api_solvers.md  building.md  developing.md  file_formats.md  games.md  index.md  install.md  quick_start.md  references.bib  tools.md
file_formats/: index.html
quick_start/: index.html
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+85 more)
tests/: CMakeLists.txt
tools/buchi/: CMakeLists.txt
tools/buchi/solvers/: attractor.cpp
tools/mean_payoff/: CMakeLists.txt  generate.cpp
tools/mean_payoff/solvers/: msca.cpp  mse.cpp
tools/parity/: CMakeLists.txt  generate.cpp  generate_parity.cpp
tools/parity/solvers/: priority_promotion.cpp  progressive_small_progress_measures.cpp  recursive.cpp
tools/stochastic_discounted/: CMakeLists.txt  generate.cpp
tools/stochastic_discounted/solvers/: objective.cpp  strategy.cpp  value.cpp
(+311 files in other folders)
